added correct database and connected it

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=GhibliGirls.db"
+    "DefaultConnection": "Data Source=Database/GhibliGirls.db"
   },
   "Logging": {
     "LogLevel": {
